create github pages

--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/amra-01-313x422.jpg" alt="Mobirise Website Builder">
+                            <img src="assets/images/uran-01-816x1063.jpg" alt="Mobirise Website Builder">
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5"><strong>AMRA BALJINNYAM</strong></h5>
-                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Жүжигчин</strong></h6>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5"><strong>Б. Амраа</strong></h5>
+                            <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Продюсер С.Уран</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
                                 ウランバートルとロサンゼルスを中心に俳優・プロデューサーとして活躍。モンゴル語のほか英語も堪能で、ハリウッドに初めて進出したモンゴル人俳優として知られる。出演・プロデュース作 “THIEF OF THE MIND”（11）でモンゴル・アカデミー賞作品賞と主演男優賞、 “TRAPPED ABROAD”（14）で同主演男優賞、 “THE FAITH”(16) でアジア世界映画祭ロサンゼルス・観客賞を受賞。その他の主な出演作に “SLAVE CONTRACT” （08）、Netflixドラマ 「マルコ・ポーロ」（14-16）、モンゴルのクライムアクション映画『リーサル・コネクション』（19）などがある。
                             </p>
@@ -276,16 +276,15 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/uran-01-816x1063.jpg" alt="Mobirise Website Builder">
+                            <img src="assets/images/amra-01-313x422.jpg" alt="Mobirise Website Builder">
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5">
-                                <strong>Нэр</strong></h5>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5"><strong>Б. Амраа</strong></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Жүжигчин</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                1990年3月26日生まれ。2004年、スクリーンデビュー作『誰も知らない』でカンヌ国際映画祭の史上最年少・日本人初となる主演男優賞を受賞。2016年、『ディストラクション・ベイビーズ』でヨコハマ映画祭、キネマ旬報ベストテンの主演男優賞を受賞。その他の主な出演作に、映画『許されざる者』（13）、『クローズEXPLODE』（14）、『最後の命』（14）、『合葬』（15）、『銀魂』シリーズ（17・18）、『夜明け』（19）、『泣くな赤鬼』（19）、ドラマ「アオイホノオ」（14）、「ゆとりですがなにか」（16）、「おんな城主 直虎」（17）などがある。主演映画『HOKUSAI』と『太陽の子』、Netflix映画『浅草キッド』が2021年公開予定。
+                                ウランバートルとロサンゼルスを中心に俳優・プロデューサーとして活躍。モンゴル語のほか英語も堪能で、ハリウッドに初めて進出したモンゴル人俳優として知られる。出演・プロデュース作 “THIEF OF THE MIND”（11）でモンゴル・アカデミー賞作品賞と主演男優賞、 “TRAPPED ABROAD”（14）で同主演男優賞、 “THE FAITH”(16) でアジア世界映画祭ロサンゼルス・観客賞を受賞。その他の主な出演作に “SLAVE CONTRACT” （08）、Netflixドラマ 「マルコ・ポーロ」（14-16）、モンゴルのクライムアクション映画『リーサル・コネクション』（19）などがある。
                             </p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
@@ -357,7 +356,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/web-page-maker.html">Web Page Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Free Offline Web Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
