--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             Harvest Moon</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header1-o">Under The Turquoise Sky</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header1-u">Victim</a>
-                    </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header5-t">TMC</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header1-u">Actors</a></li></ul>
+                    </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header1-u">TMC</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header1-u">Actors</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5"><strong>Б. Амраа</strong></h5>
+                            <h5 class="card-title mbr-fonts-style m-0 mb-3 display-5"><strong>&nbsp;С. Уран</strong></h5>
                             <h6 class="card-subtitle mbr-fonts-style mb-3 display-4"><strong>Продюсер&nbsp;</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
                                 ウランバートルとロサンゼルスを中心に俳優・プロデューサーとして活躍。モンゴル語のほか英語も堪能で、ハリウッドに初めて進出したモンゴル人俳優として知られる。出演・プロデュース作 “THIEF OF THE MIND”（11）でモンゴル・アカデミー賞作品賞と主演男優賞、 “TRAPPED ABROAD”（14）で同主演男優賞、 “THE FAITH”(16) でアジア世界映画祭ロサンゼルス・観客賞を受賞。その他の主な出演作に “SLAVE CONTRACT” （08）、Netflixドラマ 「マルコ・ポーロ」（14-16）、モンゴルのクライムアクション映画『リーサル・コネクション』（19）などがある。
@@ -356,7 +356,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Designed with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Web Site Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
