--- a/index.html
+++ b/index.html
@@ -341,22 +341,13 @@
                     
                 <div class="soc-item">
                         <a href="index.html">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="index.html">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                            <span mbr-icon class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">17PRODUCTION.MN | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022 ОН</p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center" mbr-theme-style="display-7" data-app-selector=".media-container-row .mbr-text">17PRODUCTION.MN | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022 ОН</p>
             </div>
         </div>
     </div>
-
-  
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
-  </body>
-</html>
+</section>
