--- a/index.html
+++ b/index.html
@@ -116,24 +116,32 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     </div>
 </section>
 
-<section once="footers" class="cid-t6aCAjxjKw" id="footer6-19">
+<section group="Footers" global once="footers" mbr-class="{'mbr-reveal': reveal, 'mbr-parallax-background': bg.parallax}">
 
-    
+    <mbr-parameters>
+    <!-- Block parameters controls (Blue "Gear" panel) -->
+        <input type="range" inline title="Top" name="paddingTop" min="0" max="8" step="1" value="2">
+        <input type="range" inline title="Bottom" name="paddingBottom" min="0" max="8" step="1" value="2">
+        <input type="checkbox" title="Reveal effect" name="reveal">
+        <fieldset type="background" name="bg" parallax>
+            <input type="image" title="Background Image" value="../_images/background5.jpg">
+            <input type="color" title="Background Color" value="#000000" selected>
+        </fieldset>
+        <input type="checkbox" title="Overlay" name="overlay" condition="bg.type !== 'color'" checked>
+        <input type="color" title="Overlay Color" name="overlayColor" value="#232323" condition="overlay && bg.type !== 'color'">
+        <input type="range" inline title="Opacity" name="overlayOpacity" min="0" max="1" step="0.1" value="0.8" condition="overlay && bg.type !== 'color'">
+    <!-- End block parameters -->
+    </mbr-parameters>
 
-    
+    <div class="mbr-overlay" mbr-if="overlay && bg.type !== 'color'" opacity="{{overlayOpacity}}" bg-color="{{overlayColor}}"></div>
 
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                <p class="mbr-text mb-0 mbr-fonts-style" mbr-theme-style="display-7" data-app-selector=".media-container-row .mbr-text" data-app-placeholder="Type Text">
                     © 17PRODUCTION.MN | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022 ОН
                 </p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/980983" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Website Maker</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
-  
-  
-  <input name="animation" type="hidden">
-  </body>
-</html>
+</section>
