--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="testimonials2 cid-t61bu9Mz0l" id="testimonials2-i">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="testimonials2 cid-t61bu9Mz0l" id="testimonials2-i">
 
     
 
@@ -95,7 +95,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
               <img src="assets/images/amra-01-313x422.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;"><strong>Amarsaikhan Baljinnyam</strong></span><br><span style="font-style: normal;"><strong>Actor</strong></span><br><span style="font-style: normal;"><strong><br></strong><br>Actor, writer, director Amra /Amarsaikhan Baljinnyam/ is the only filmmaker who won 3 times of the Best Actor nomination from the Mongolian Academy awards and the first Mongolian actor who stepped in Hollywood by his role as Ariq Boke (Khubilai Khan’s brother) in the Netflix original series The Marco Polo.
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><br><strong><span style="font-style: normal;"><br>Amarsaikhan Baljinnyam</span><br></strong><span style="font-style: normal;"><strong>Actor</strong><br></span><br><span style="font-style: normal;">Actor, writer, director Amra /Amarsaikhan Baljinnyam/ is the only filmmaker who won 3 times of the Best Actor nomination from the Mongolian Academy awards and the first Mongolian actor who stepped in Hollywood by his role as Ariq Boke (Khubilai Khan’s brother) in the Netflix original series The Marco Polo.
 <br>After graduating the Mongolian Culture and Arts University as an actor in 1999, he has been focusing only in the cinemas, working mostly as leads in over 20 features. His first scriptwriting work “Faith” drama feature won the Best picture at the Mongolian Cinema awards and “Audience awards” at the Asian World Film Festival in Los Angeles.
 <br>He worked as a co-writer and lead actor in the “Under the turquoise sky”, co-production of Mongolia and Japan. This road film selected as the Opening film of the 68th Mannheim-Heidelberg International Film Festival where it took also world premiere there. It won the “New Talent award” and “FIPRESCI International Film Critique award” at the MHIFF.
 <br>He co-produced and starred as one of the leads, THE MONGOLAIN CONNECTION, action feature that is co-production of Mongolia-Kazakhstan-US in 2019. This film won the Outstanding action feature and Outstanding fight choreography awards at a festival in Buffalo, New York. This film has been distributing in the international market through Princ Films, based in Los Angeles.
