--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="carousel slide cid-t6bAWHI4dt" data-interval="false" id="slider1-1t">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="carousel slide cid-t6bAWHI4dt" data-interval="false" id="slider1-1t">
 
     
 
@@ -343,9 +343,7 @@ Seventeen productions is a leading Mongolian production company founded in 2016 
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © 17PRODUCTION.MN | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC © 2022 ОН
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">17PRODUCTION.MN | ALL RIGHTS RESERVED. DEVELOPED BY FAST LINE LLC ©   2022&nbsp;</p>
             </div>
         </div>
     </div>
